5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1573_1559.log
== TEST (2019-03-27 15:49:26) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:49:32) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper)
-- EXECUTION TIME:
0.120913
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:49:55) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:49:57) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- EXECUTION TIME:
0.171824
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:49:58) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- EXECUTION TIME:
0.207511
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:49:59) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- EXECUTION TIME:
0.111544
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:49:59) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper())
-- EXECUTION TIME:
0.174878
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.
                                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:50:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.
print(frase.upper())
-- EXECUTION TIME:
0.141387
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.
                                                                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:15) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:50:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.137939
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
